# wiring.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: Build.yml
resources/: sample_obi.txt  thickOBI.txt  toy_example.txt
src/: axiom_translation.rs  class_translation.rs  lib.rs  main.rs  thick_triple_parser.rs
src/ldtab2ofn/: annotation_translation.rs  axiom_translation.rs  class_translation.rs  mod.rs  thick_triple_parser.rs
src/ldtab_2_ofn/: annotation_translation.rs  axiom_translation.rs  class_translation.rs  mod.rs  parser.rs  property_translation.rs  thick_triple_parser.rs  translation.rs
src/ofn2ldtab/: .util.rs.swp  annotation_translation.rs  axiom_translation.rs  class_translation.rs  mod.rs  ofn_parser.rs  property_translation.rs  util.rs
src/ofn2man/: axiom_translation.rs  class_translation.rs  parser.rs  property_translation.rs
src/ofn2thick/: .axiom_translation.rs.swp  .class_translation.rs.swp  .owl.rs.swp  axiom_translation.rs  class_translation.rs  mod.rs  ofn_parser.rs  owl.rs  property_translation.rs
src/ofn_2_ldtab/: annotation_translation.rs  axiom_translation.rs  class_translation.rs  mod.rs  ofn_parser.rs  parser.rs  property_translation.rs  rule_translation.rs  translation.rs  util.rs
src/ofn_2_man/: axiom_translation.rs  class_translation.rs  mod.rs  parser.rs  property_translation.rs  translation.rs
src/ofn_2_rdfa/: axiom_translation.rs  class_translation.rs  mod.rs  ofn_parser.rs  (+1 more)
tests/: .thick_ofn_thick_tests.rs.swp  integration_test.rs  ldtab_string_comparison_tests.rs  thick_ofn_thick_tests.rs
(+52 files in other folders)
